--- a/package.json
+++ b/package.json
@@ -27,16 +27,32 @@
   "main": "ng2-typing-carousel.js",
   "typings": "./ng2-typing-carousel.d.ts",
   "dependencies": {
-    "es6-shim": "^0.35.0"
+    "es6-shim": "^0.35.0",
+    "gulp-typescript": "^2.12.2",
+    "ts-loader": "^0.8.1"
   },
   "devDependencies": {
     "angular2": "^2.0.0-beta.12",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "gulp-webpack": "^1.5.0",
+    "jshint": "^2.9.1",
+    "jshint-loader": "^0.8.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6",
-    "typescript": "^1.7.5"
+    "typescript": "^1.7.5",
+    "webpack": "1.12.14",
+    "webpack-node-externals": "^1.0.0",
+    "zone.js": "0.6.6"
   },
   "engines": {
     "node": ">=0.8.0"
