--- a/package.json
+++ b/package.json
@@ -1,59 +1,48 @@
 {
-  "name": "angular2-rest-api",
-  "version": "0.1.2",
-  "scripts": {
-    "tsc": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/zaqqaz/Angular2-typing-carousel"
-  },
-  "author": {
-    "name": "Denis Artyuhovich | denis.by",
-    "email": "i@denis.by"
-  },
-  "keywords": [
-    "angular",
-    "angular2",
-    "carousel",
-    "directive",
-    "typing"
-  ],
+  "name": "ng2-rest-api",
+  "version": "0.2.0",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/zaqqaz/Angular2-typing-carousel/issues"
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
+  "scripts": {
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
   },
-  "main": "./index.js",
-  "typings": "./index.d.ts",
+
+  "private": false,
   "dependencies": {
-    "es6-shim": "^0.35.0",
-    "gulp-typescript": "^2.12.2",
-    "ts-loader": "^0.8.1"
+    "@angular/common": "~2.0.0",
+    "@angular/compiler": "~2.0.0",
+    "@angular/core": "~2.0.0",
+    "@angular/forms": "~2.0.0",
+    "@angular/http": "~2.0.0",
+    "@angular/platform-browser": "~2.0.0",
+    "@angular/platform-browser-dynamic": "~2.0.0",
+    "@angular/router": "~3.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "angular2": "^2.0.0-beta.13",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.6.5",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.35.0",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
-    "gulp-webpack": "^1.5.0",
-    "jshint": "^2.9.1",
-    "jshint-loader": "^0.8.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "typescript": "^1.7.5",
-    "webpack": "1.12.14",
-    "webpack-node-externals": "^1.0.0",
-    "zone.js": "0.6.6"
-  },
-  "engines": {
-    "node": ">=0.8.0"
+    "@types/jasmine": "^2.2.30",
+    "@types/node": "^6.0.42",
+    "codelyzer": "~0.0.26",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "2.0.2",
+    "webpack": "2.1.0-beta.24",
+    "ts-loader": "^0.9.5"
   }
 }
