--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ng2-rest-api",
-  "version": "0.2.0",
+  "version": "0.3.1",
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "typings": "./dist/index.d.ts",
   "scripts": {
     "start": "ng serve",
@@ -11,7 +11,6 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
-
   "private": false,
   "dependencies": {
     "@angular/common": "~2.0.0",
@@ -25,11 +24,15 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "babel-polyfill": "^6.16.0"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -39,10 +42,11 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
+    "ts-loader": "^0.9.5",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "2.0.2",
     "webpack": "2.1.0-beta.24",
-    "ts-loader": "^0.9.5"
+    "webpack-node-externals": "^1.5.4"
   }
 }
